tests/snapshots/cli__help_workspace_create.snap
---
source: tests/cli.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Create a workspace.

Prints its WorkspaceRecord.

Example: multiplexer-driver --harness tmux workspace create --label project-x

Usage: multiplexer-driver workspace create [OPTIONS] --label <LABEL>

Options:
      --harness <HARNESS>
          Harness to drive. Required for workspace, pane, and raw

          Possible values:
          - tmux:  tmux
          - herdr: Herdr
          
          [env: MULTIPLEXER_DRIVER_HARNESS=]

      --label <LABEL>
          Workspace label (tmux session name)

      --cwd <CWD>
          Root directory; defaults to the current directory

      --session <SESSION>
          Harness server to use: a Herdr session name or a tmux -L socket name. Unset uses the ambient server
          
          [env: MULTIPLEXER_DRIVER_SESSION=]

      --pretty
          Indent single-object output. Lists stay JSON Lines

      --log-level <LOG_LEVEL>
          Diagnostics level on stderr: debug, info, warn, or error
          
          [env: RUST_LOG=]
          [default: warn]

  -h, --help
          Print help (see a summary with '-h')
